--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,9 @@
     "homepage": "http://framework.zend.com/",
     "require": {
         "php": ">=5.3.3",
-        "zendframework/zendframework": ">2.2.0rc1",
+        "zendframework/zendframework": ">=2.2.0",
         "doctrine/doctrine-orm-module": "0.*",
+        "phly/phly-restfully": ">1.0.0",
         "doctrine/annotations": ">=1.0"
     }
 }
